<!--
  ~ strings.xml
  ~ Copyright (C) 2017  Automata Development
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<resources>
	<string name="app_name">Make-A-Pede</string>
	<string name="device_list">Device List</string>
	<string name="ble_not_supported">BLE is not supported</string>
	<string name="error_bluetooth_not_supported">Bluetooth not supported</string>
	<string name="error_bluetooth_not_enabled">Bluetooth is not enabled</string>
	<string name="unknown_device">Unknown device</string>
	<string name="menu_scan">Scan</string>
	<string name="menu_stop">Stop</string>
	<string name="website_btn_text">Open Website</string>
	<string name="connect_btn_text">Connect to Make-A-Pede</string>
	<string name="action_joystick">Joystick</string>
	<string name="action_arrows">Arrows</string>
	<string name="action_sliders">Sliders</string>
	<string name="joystick_demo_action">Joystick Demo</string>
	<string name="available_devices">Available Devices</string>
	<string name="bluetooth_protocol">Bluetooth Protocol</string>
	<string name="protocol_ble">BLE</string>
	<string name="protocol_spp">SPP</string>
	<string name="info_activity_title">Info</string>
	<string name="action_open_privacy_policy">Privacy Policy</string>
	<string name="app_title_info_page">Official Make-A-Pede Controller App</string>
	<string name="app_version_text">Version: 2.0</string>
	<string name="arduino_library_version_text">Arduino Library Version: 1.1.0</string>
	<string name="source_link">https://github.com/Make-A-Pede/Make-A-Pede-Android-App</string>
	<string name="source_text">Source</string>
	<string name="license_button_text">License</string>
	<string name="credits_button_text">Credits</string>
</resources>
