<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ main_activity_menu.xml
  ~ Copyright (C) 2017  Automata Development
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<menu
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">

	<item
		android:id="@+id/action_joystick"
		android:title="@string/action_joystick"
		android:icon="@drawable/joystick"
		app:showAsAction="ifRoom"/>

	<item
		android:id="@+id/action_arrows"
		android:title="@string/action_arrows"
		android:icon="@drawable/arrows"
		app:showAsAction="ifRoom"/>

	<item
		android:id="@+id/action_sliders"
		android:title="@string/action_sliders"
		android:icon="@drawable/remote"
		app:showAsAction="ifRoom"/>

</menu>