<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ activity_info.xml
  ~ Copyright (C) 2018  Automata Development
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
  ~
  -->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".activities.InfoActivity">

	<ImageView
		android:id="@+id/background"
		android:layout_width="0dp"
		android:layout_height="0dp"
		android:scaleType="fitXY"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintHorizontal_bias="0.0"
		app:layout_constraintLeft_toLeftOf="parent"
		app:layout_constraintRight_toRightOf="parent"
		app:layout_constraintTop_toTopOf="parent"
		app:layout_constraintVertical_bias="1.0"
		app:srcCompat="@mipmap/img_background_dark" />

	<TextView
		android:id="@+id/app_title"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:gravity="center"
		android:text="@string/app_title_info_page"
		android:textSize="24sp"
		android:textStyle="bold"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/app_version"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:gravity="center"
		android:text="@string/app_version_text"
		android:textSize="18sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/app_title" />

	<TextView
		android:id="@+id/arduino_library_version"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:gravity="center"
		android:text="@string/arduino_library_version_text"
		android:textSize="18sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/app_version" />

	<Button
		android:id="@+id/source_button"
		style="@style/Widget.AppCompat.Button.Borderless.Colored"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		android:layout_marginTop="8dp"
		android:textSize="18sp"
		android:text="@string/source_text"
		app:layout_constraintEnd_toStartOf="@+id/license_button"
		app:layout_constraintTop_toBottomOf="@+id/arduino_library_version" />

	<Button
		android:id="@+id/license_button"
		style="@style/Widget.AppCompat.Button.Borderless.Colored"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:textSize="18sp"
		android:text="@string/license_button_text"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintHorizontal_bias="0.5"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/arduino_library_version" />

	<Button
		android:id="@+id/credits_button"
		style="@style/Widget.AppCompat.Button.Borderless.Colored"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:textSize="18sp"
		android:text="@string/credits_button_text"
		app:layout_constraintStart_toEndOf="@+id/license_button"
		app:layout_constraintTop_toBottomOf="@+id/arduino_library_version" />

</android.support.constraint.ConstraintLayout>
